[tool.poetry]
name = "aw-docs"
version = "0.1.0"
description = "Documentation for ActivityWatch"
authors = ["Erik Bjäreholt <erik@bjareho.lt>", "Johan Bjäreholt <johan@bjareho.lt>"]
license = "MPL-2.0"
packages = [{ include = "src/" }]

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^4.0"
sphinx-autobuild = "*"
sphinx_rtd_theme = "*"
recommonmark = "^0.7.0"
aw-core = {git = "https://github.com/ActivityWatch/aw-core.git", rev = "master"}
aw-server = {git = "https://github.com/ActivityWatch/aw-server.git", rev = "master"}
aw-client = {git = "https://github.com/ActivityWatch/aw-client.git", rev = "master"}
sphinx-tabs = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
