[tool.poetry]
name = "aw-docs"
version = "0.1.0"
description = "Documentation for ActivityWatch"
authors = ["Erik Bjäreholt <erik@bjareho.lt>", "Johan Bjäreholt <johan@bjareho.lt>"]
license = "MPL-2.0"
packages = [{ include = "src/" }]

[tool.poetry.dependencies]
python = "^3.11"

# Packages to document
aw-core = {git = "https://github.com/ActivityWatch/aw-core.git", rev = "master"}
aw-server = {git = "https://github.com/ActivityWatch/aw-server.git", rev = "master"}
aw-client = {git = "https://github.com/ActivityWatch/aw-client.git", rev = "master"}

# Doc build deps
sphinx = ">=7.0"
sphinx-autobuild = "*"
sphinx_rtd_theme = ">=2.0"
sphinx-book-theme = "*"
sphinx-tabs = "^3.4"
sphinx-click = ">=6.0"
myst-parser = ">=2.0"
sphinxext-rediraffe = "^0.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
